tests/integration/pilot/test_artifacts/pilot-f119641b99704107b0cfca0c6/TestTraffic/virtualservice/set_header/tproxy/to_tproxy/_test_context/VirtualService.2980056141.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: default
  namespace: echo-2-60257
spec:
  hosts:
  - tproxy
  http:
  - headers:
      request:
        set:
          x-custom: some-value
    route:
    - destination:
        host: tproxy
